--- a/food/黄焖鸡.md
+++ b/food/黄焖鸡.md
@@ -21,8 +21,8 @@
 4. 冒大泡时放入鸡腿，中大火炒至上色，焦灼
 5. 加入香菇和香菇水煮开
 6. 撇去浮沫，可调味
-7. 小火煮一小时
-8. 大火收汁，加入彩椒
+7. 小火煮20分钟，加入土豆煮10分钟
+8. 加入彩椒，大火收汁
 
 
 
@@ -31,11 +31,11 @@
 
 ### 结果
 鸡肉烂、软，如pulled meat，但入味
-
+鸡肉味道没汤重，汤味道很好
 
 
 
 ### 改进
-- 减少煮的时长
-- 加入土豆等
-- 菜谱说一般调料腌制，一半调料加入汤
+- 煮鸡的时长控制在30分钟
+- 腌料可以加多点
+- 汤汁不用收完，留一些
