--- a/food/日式咖喱.md
+++ b/food/日式咖喱.md
@@ -14,9 +14,11 @@
 
 ### 步骤
 1. 洋葱炒至焦，加入锅中，加水烧开
-2. 土豆和牛肉炒至表面焦，黑
-3. 放入水里煮30-60分钟
-4. 加入咖喱块，煮15分钟，加青椒
+2. 牛肉炒至表面焦，黑，入水煮开，撇去浮沫
+3. 开始计时
+4. 40:00：土豆萝卜等炒上色，入水
+5. 50:00；加入咖喱块，调味
+6. 55:00: 加青椒
 
 
 
@@ -31,4 +33,4 @@
 
 
 ### 改进
-- 少放点酱油
+- 尝试加苹果
