--- a/food/黄焖鸡.md
+++ b/food/黄焖鸡.md
@@ -15,27 +15,25 @@
 
 
 ### 步骤
-1. 除冰糖以外的调料用来腌制肉，至少0.5小时
-2. 香菇泡温水，至少0.5小时
+1. 香菇泡温水，至少0.5小时
+2. 除冰糖以外的调料用来腌制肉，至少0.5小时
 3. 小火炒冰糖
 4. 冒大泡时放入鸡腿，中大火炒至上色，焦灼
-5. 加入香菇和香菇水煮开
-6. 撇去浮沫，可调味
-7. 小火煮20分钟，加入土豆煮10分钟
-8. 加入彩椒，大火收汁
-
-
-
+    - 炒时鸡肉去掉腌料，更容易炒焦 
+5. 加入姜葱蒜和香菇 炒香
+6. 加入香菇水和剩余腌料，煮开，调味
+8. 小火煮10-20分钟，加入土豆煮10分钟
+9. 加入彩椒，大火收汁
 
 
 
 ### 结果
 鸡肉烂、软，如pulled meat，但入味
 鸡肉味道没汤重，汤味道很好
-
+土豆不够烂
 
 
 ### 改进
-- 煮鸡的时长控制在30分钟
+- 煮鸡的时长控制在20-30分钟
 - 腌料可以加多点
 - 汤汁不用收完，留一些
