--- a/food/日式咖喱.md
+++ b/food/日式咖喱.md
@@ -4,7 +4,7 @@
 | Ingredient | Quantity |
 | ----------- | ----------- |
 | 牛肉flank | 随意 |
-| 土豆等 | 随意 |
+| 土豆苹果萝卜等 | 随意 |
 | 洋葱 | 半个 |
 | 咖喱块 | 一个 |
 | 生抽等 |  |
@@ -13,12 +13,13 @@
 
 
 ### 步骤
-1. 洋葱炒至焦，加入锅中，加水烧开
-2. 牛肉炒至表面焦，黑，入水煮开，撇去浮沫
-3. 开始计时
-4. 40:00：土豆萝卜等炒上色，入水
-5. 50:00；加入咖喱块，调味
-6. 55:00: 加青椒
+1. 牛肉加盐胡椒，炒至表面焦，黑，入水煮开，撇去浮沫
+2. 开始计时
+3. 洋葱炒至焦，加入锅中
+4. 加入小块土豆
+5. 40:00：土豆萝卜等炒上色，入水
+6. 50:00: 放苹果
+7. 55:00；加入青椒、咖喱块，调味
 
 
 
